add new brokers

--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -65,6 +65,7 @@ amplication-server:
 
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
       # KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
+      KAFKA_BROKERS: '["amplication-staging-os-cp-kafka-headless:9092"]'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server-group
 
@@ -107,6 +108,7 @@ amplication-git-push-webhook-service:
   config:
     env:
       # KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
+      KAFKA_BROKERS: '["amplication-staging-os-cp-kafka-headless:9092"]'
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
       KAFKA_CLIENT_ID: git-push-webhook-service
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
@@ -129,6 +131,7 @@ amplication-git-pull-service:
       GITHUB_APP_PRIVATE_KEY: ""
 
       # KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
+      KAFKA_BROKERS: '["amplication-staging-os-cp-kafka-headless:9092"]'
       KAFKA_CLIENT_ID: git-pull-service
       KAFKA_GROUP_ID: git-pull-service-group
 
@@ -138,6 +141,7 @@ amplication-git-pull-request-service:
   config:
     env:
       # KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
+      KAFKA_BROKERS: '["amplication-staging-os-cp-kafka-headless:9092"]'
       KAFKA_CLIENT_ID: git-pull-request-service
       KAFKA_GROUP_ID: git-pull-request-service-group
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
