--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -64,8 +64,7 @@ amplication-server:
       CLIENT_HOST: "https://app.staging-os.amplication-dev.com"
 
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
-      # KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
-      KAFKA_BROKERS: '["amplication-staging-os-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: '["b-2.staging-os.mcwbzt.c22.kafka.us-east-1.amazonaws.com:9092","b-1.staging-os.mcwbzt.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server-group
 
@@ -107,8 +106,7 @@ amplication-git-push-webhook-service:
     hostname: webhook.staging-os.amplication-dev.com
   config:
     env:
-      # KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
-      KAFKA_BROKERS: '["amplication-staging-os-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: '["b-2.staging-os.mcwbzt.c22.kafka.us-east-1.amazonaws.com:9092","b-1.staging-os.mcwbzt.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
       KAFKA_CLIENT_ID: git-push-webhook-service
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
@@ -130,8 +128,7 @@ amplication-git-pull-service:
       GIT_DEFAULT_ORIGIN_NAME: origin
       GITHUB_APP_PRIVATE_KEY: ""
 
-      # KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
-      KAFKA_BROKERS: '["amplication-staging-os-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: '["b-2.staging-os.mcwbzt.c22.kafka.us-east-1.amazonaws.com:9092","b-1.staging-os.mcwbzt.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: git-pull-service
       KAFKA_GROUP_ID: git-pull-service-group
 
@@ -140,8 +137,7 @@ amplication-git-pull-service:
 amplication-git-pull-request-service:
   config:
     env:
-      # KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
-      KAFKA_BROKERS: '["amplication-staging-os-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: '["b-2.staging-os.mcwbzt.c22.kafka.us-east-1.amazonaws.com:9092","b-1.staging-os.mcwbzt.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: git-pull-request-service
       KAFKA_GROUP_ID: git-pull-request-service-group
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
