--- a/packages/amplication-server/package.json
+++ b/packages/amplication-server/package.json
@@ -20,7 +20,8 @@
     "docker": "docker-compose up -d",
     "docker:down": "docker-compose down --volumes",
     "generate-graphql-schema": "ts-node -r tsconfig-paths/register scripts/generate-graphql-schema",
-    "check-graphql-schema": "ts-node -r tsconfig-paths/register scripts/check-graphql-schema"
+    "check-graphql-schema": "ts-node -r tsconfig-paths/register scripts/check-graphql-schema",
+    "migrate:up": "cd ../amplication-prisma-db & npm run migrate:up"
   },
   "dependencies": {
     "@amplication/prisma-db": "0.12.2",
