helm: fix charts pv mounts

--- a/helm/charts/services/amplication-git-pull-service/values.yaml
+++ b/helm/charts/services/amplication-git-pull-service/values.yaml
@@ -15,7 +15,7 @@ image:
     
 volume:
   name: amplication-data
-  path: /amplication-data/pull
+  path: /amplication-data
 
 service:
   type: ClusterIP
