--- a/helm/charts/services/amplication-git-pull-request-service/values.yaml
+++ b/helm/charts/services/amplication-git-pull-request-service/values.yaml
@@ -16,7 +16,7 @@ image:
 
 volume:
   name: amplication-data
-  path: /amplication-data/pull
+  path: /amplication-data
 
 service:
   type: ClusterIP
