--- a/helm/charts/amplication/values-common.yaml
+++ b/helm/charts/amplication/values-common.yaml
@@ -69,6 +69,8 @@ amplication-server:
   ingress:
     enabled: true
     hostname: server-dev.staging-os.amplication-dev.com
+  pvc:
+    name: common-efs-claim
   config:
     env:
       GITHUB_APP_AUTH_SCOPE: "user:email,repo,read:org"
