--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -81,6 +81,8 @@ amplication-git-push-webhook-service:
 amplication-git-pull-service:
   postgres:
     install: false
+  pvc:
+    name: staging-os-efs-claim
   config:
     env:
       NODE_ENV: "production"
@@ -102,6 +104,8 @@ amplication-git-pull-service:
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
 
 amplication-git-pull-request-service:
+  pvc:
+    name: staging-os-efs-claim
   config:
     env:
       KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
