--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -28,9 +28,11 @@ amplication-server:
     name: staging-os-efs-claim
   config:
     env:
+
       HOST: "https://server.staging-os.amplication-dev.com"
       CLIENT_HOST: "https://app.staging-os.amplication-dev.com"
 
+      #KAFKA
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
       KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: amplication-server
@@ -40,6 +42,7 @@ amplication-server:
       BASE_BUILDS_FOLDER: /amplication-data/build-data
 
       #GCP - APPS Builder
+
       DEFAULT_DISK: gcs
       LOCAL_DISK_ROOT: /artifacts
       CONTAINER_BUILDER_DEFAULT: cloud-build
