formatter => add to amplication-storage-gateway json and run it

--- a/packages/amplication-storage-gateway/package.json
+++ b/packages/amplication-storage-gateway/package.json
@@ -8,6 +8,8 @@
     "start:debug": "nest start --debug --watch",
     "build": "nest build",
     "test": "jest",
+    "check-format": "prettier --check \"**/*.{js,ts,json,gql,md,yaml}\"",
+    "format": "prettier --write \"**/*.{js,ts,json,gql,md,yaml}\"",
     "db:clean": "ts-node scripts/clean.ts",
     "db:init": "run-s \"db:migrate-save -- --name 'initial version'\" db:migrate-up seed",
     "docker:db": "docker-compose -f docker-compose.db.yml up -d",
