--- a/helm/charts/services/amplication-client/values.yaml
+++ b/helm/charts/services/amplication-client/values.yaml
@@ -20,7 +20,15 @@ service:
   protocol: TCP
   hostname: app.amplication-dev.com	
   certificatearn: arn:aws:acm:us-east-1:407256539111:certificate/bc3442ea-ddcb-4870-b4ba-79144e623d71
-  
+
+podAnnotations:
+  cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
+
+maxMemory: 2
+minMemory: 2
+maxCPU: 2
+minCPU: 2 
+
 config:
   env:
     REACT_APP_SERVER_URI: https://server.amplication-dev.com
