--- a/helm/charts/services/amplication-git-pull-service/values.yaml
+++ b/helm/charts/services/amplication-git-pull-service/values.yaml
@@ -17,6 +17,14 @@ volume:
   name: amplication-data
   path: /amplication-data
 
+podAnnotations:
+  cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
+
+maxMemory: 2
+minMemory: 2
+maxCPU: 2
+minCPU: 2
+
 service:
   type: ClusterIP
   port:
