--- a/helm/charts/services/amplication-git-push-webhook-service/values.yaml
+++ b/helm/charts/services/amplication-git-push-webhook-service/values.yaml
@@ -13,6 +13,14 @@ image:
   tag: 0.0.1
   imagePullSecrets: []
 
+podAnnotations:
+  cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
+
+maxMemory: 2
+minMemory: 2
+maxCPU: 2
+minCPU: 2
+
 service:
   type: ClusterIP
   port: 
