--- a/helm/charts/services/amplication-server/values.yaml
+++ b/helm/charts/services/amplication-server/values.yaml
@@ -29,6 +29,14 @@ ingress:
 secrets:
   GPC: ""
 
+podAnnotations:
+  cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
+
+maxMemory: 2
+minMemory: 2
+maxCPU: 2
+minCPU: 2
+
 pvc:
   storageLimit: 5Gi
   storageRequest: 1Gi
