--- a/helm/charts/services/amplication-client/values.yaml
+++ b/helm/charts/services/amplication-client/values.yaml
@@ -24,8 +24,8 @@ service:
 podAnnotations:
   cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
 
-maxMemory: 2
-minMemory: 2
+maxMemory: "3Gi"
+minMemory: "3Gi"
 maxCPU: 1
 minCPU: 1
 
