--- a/helm/charts/services/amplication-server/values.yaml
+++ b/helm/charts/services/amplication-server/values.yaml
@@ -32,8 +32,8 @@ secrets:
 podAnnotations:
   cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
 
-maxMemory: 2
-minMemory: 2
+maxMemory: "3Gi"
+minMemory: "3Gi"
 maxCPU: 1
 minCPU: 1
 
