--- a/helm/charts/services/amplication-server/templates/deployment.yaml
+++ b/helm/charts/services/amplication-server/templates/deployment.yaml
@@ -21,6 +21,13 @@ spec:
           {{- end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          resources:
+            limits:
+              cpu: {{ .Values.maxCPU }}
+              memory: {{ .Values.minMemory }}
+            requests:
+              cpu:    {{ .Values.minCPU }}
+              memory: {{ .Values.maxMemory }}
           {{- if hasKey .Values "config" }}
           envFrom:
           - configMapRef:
