--- a/helm/charts/services/amplication-git-pull-request-service/values.yaml
+++ b/helm/charts/services/amplication-git-pull-request-service/values.yaml
@@ -17,8 +17,8 @@ image:
 podAnnotations:
   cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
 
-maxMemory: 2
-minMemory: 2
+maxMemory: "2Gi"
+minMemory: "2Gi"
 maxCPU: 1
 minCPU: 1
 
