--- a/helm/charts/services/amplication-git-pull-service/values.yaml
+++ b/helm/charts/services/amplication-git-pull-service/values.yaml
@@ -20,8 +20,8 @@ volume:
 podAnnotations:
   cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
 
-maxMemory: 2
-minMemory: 2
+maxMemory: "2Gi"
+minMemory: "2Gi"
 maxCPU: 1
 minCPU: 1
 
