--- a/helm/charts/services/amplication-server/templates/ingress.yaml
+++ b/helm/charts/services/amplication-server/templates/ingress.yaml
@@ -1,3 +1,34 @@
 {{ include "base.ingress" (list . "amplication-server.ingress") -}}
 {{- define "amplication-server.ingress" -}}
+metadata:
+  name: {{ .Values.name }}
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+  - host: {{ .Values.ingress.hostname }}  
+    http:
+      paths:
+      - backend:
+          serviceName: {{ .Values.name }}
+          servicePort: http
+        path: /
+      - backend:
+          serviceName: {{ .Values.name }}
+          servicePort: https
+        path: /
+  {{- if hasKey .Values.ingress "hostname_production" }}
+  - host: {{ .Values.ingress.hostname_production }}  
+    http:
+      paths:
+      - backend:
+          serviceName: {{ .Values.name }}
+          servicePort: http
+        path: /
+      - backend:
+          serviceName: {{ .Values.name }}
+          servicePort: https
+        path: /
+  {{- end }}
 {{- end }}
