fix: add  git config safe.directory in git pull service

--- a/ee/packages/amplication-git-pull-service/Dockerfile
+++ b/ee/packages/amplication-git-pull-service/Dockerfile
@@ -4,7 +4,7 @@ ARG NODE_VERSION=16.13.1
 FROM node:$NODE_VERSION-$ALPINE_VERSION AS base
 
 RUN apk --no-cache add git
-RUN git config --global --add safe.directory *
+RUN git config --global --add safe.directory '*'
 
 ARG NPM_VERSION=8.1.2
 ENV NPM_CONFIG_LOGLEVEL=silent
