--- a/packages/amplication-generation-core/package.json
+++ b/packages/amplication-generation-core/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@amplication/data": "^0.12.7",
     "@types/lodash": "^4.14.182",
+    "prettier": "2.1.1",
     "recast": "0.20.5",
     "ast-types": "0.14.2"
   }
