--- a/packages/amplication-generation-core/package.json
+++ b/packages/amplication-generation-core/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/normalize-path": "^3.0.0",
+    "@types/prettier": "^2.6.1",
     "typescript": "4.0.2"
   },
   "jest": {
