--- a/helm/charts/services/amplication-server/templates/ingress.yaml
+++ b/helm/charts/services/amplication-server/templates/ingress.yaml
@@ -4,7 +4,8 @@ metadata:
   name: {{ .Values.name }}
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+
 spec:
   rules:
   - host: {{ .Values.ingress.hostname }}  
