--- a/packages/amplication-server/package.json
+++ b/packages/amplication-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@amplication/server",
-  "version": "0.12.9",
+  "version": "0.13.0",
   "private": true,
   "scripts": {
     "prebuild": "rimraf dist",
@@ -24,13 +24,13 @@
     "migrate:up": "cd ../amplication-prisma-db & npm run migrate:up"
   },
   "dependencies": {
-    "@amplication/prisma-db": "0.12.2",
-    "@amplication/container-builder": "^0.12.9",
-    "@amplication/data": "^0.12.9",
-    "@amplication/data-service-generator": "^0.12.9",
-    "@amplication/deployer": "^0.12.9",
-    "@amplication/git-service": "^0.12.9",
-    "@amplication/kafka": "^0.12.2",
+    "@amplication/container-builder": "^0.13.0",
+    "@amplication/data": "^0.13.0",
+    "@amplication/data-service-generator": "^0.13.0",
+    "@amplication/deployer": "^0.13.0",
+    "@amplication/git-service": "^0.13.0",
+    "@amplication/kafka": "^0.13.0",
+    "@amplication/prisma-db": "^0.13.0",
     "@apollo/gateway": "0.42.3",
     "@codebrew/nestjs-storage": "0.1.6",
     "@extra-set/difference": "2.2.3",
