--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -38,3 +38,7 @@ GITHUB_APP_CLIENT_ID = [github-app-client-id]
 GITHUB_APP_APP_ID = [github-app-app-id]
 GITHUB_APP_PRIVATE_KEY = [github-app-private-key]
 GITHUB_APP_INSTALLATION_URL = [github-app-installation-url]
+
+# Novu
+NOVU_API_KEY=
+NOVU_SAMPLE_USE_ID=
