--- a/ee/packages/amplication-git-pull-service/.env
+++ b/ee/packages/amplication-git-pull-service/.env
@@ -1,7 +1,7 @@
 POSTGRESQL_USER=admin
 POSTGRESQL_PASSWORD=admin
 POSTGRESQL_PORT=5432
-POSTGRESQL_URL=postgres://admin:admin@localhost:5432
+POSTGRESQL_URL=postgresql://admin:admin@localhost:5432
 COMPOSE_PROJECT_NAME=amplication-git-pull-service
 
 NODE_ENV=developement
