--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -88,7 +88,7 @@ amplication-git-push-webhook-service:
     install: false
   ingress:
     enabled: true
-    hostname: webhook.amplication.com
+    hostname: webhooks.amplication.com
   config:
     env:
       #KAFKA
