--- a/packages/amplication-server/package.json
+++ b/packages/amplication-server/package.json
@@ -77,12 +77,7 @@
     "get-stream": "6.0.1",
     "graphql": "15.7.2",
     "graphql-type-json": "0.3.2",
-    "lodash.get": "4.4.2",
-    "lodash.head": "4.0.1",
-    "lodash.isequalwith": "4.4.0",
-    "lodash.last": "3.0.0",
-    "lodash.omit": "4.5.0",
-    "lodash.set": "4.3.2",
+    "lodash": "4.17.21",
     "nest-morgan": "1.0.1",
     "nest-winston": "1.6.2",
     "nestjs-prisma": "0.14.3",
@@ -116,12 +111,7 @@
     "@types/express": "4.17.2",
     "@types/graphql-type-json": "0.3.2",
     "@types/jest": "25.2.3",
-    "@types/lodash.get": "4.4.6",
-    "@types/lodash.head": "4.0.6",
-    "@types/lodash.isequalwith": "4.4.6",
-    "@types/lodash.last": "3.0.6",
-    "@types/lodash.omit": "4.5.6",
-    "@types/lodash.set": "4.3.6",
+    "@types/lodash": "4.14.182",
     "@types/node": "13.7.4",
     "@types/node-fetch": "2.6.1",
     "@types/passport": "1.0.7",
