--- a/helm/charts/amplication/Chart.yaml
+++ b/helm/charts/amplication/Chart.yaml
@@ -30,6 +30,9 @@ dependencies:
 - name: amplication-git-push-webhook-service
   version: "0.1.0"
   repository: "file://../services/amplication-git-push-webhook-service"
+- name: amplication-storage-gateway-service
+  version: "0.1.0"
+  repository: "file://../services/amplication-storage-gateway-service"
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
