--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -139,3 +139,18 @@ amplication-git-pull-request-service:
 
       #GitHub App
       GITHUB_APP_APP_ID: "176701"
+
+amplication-storage-gateway-service:
+  pvc:
+    name: prod-efs-claim
+  config:
+    env:
+      #KAFKA
+      KAFKA_BROKERS: '["b-1.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      GENERATE_PULL_REQUEST_TOPIC: authorization.internal.can-access-build.request.0
+
+      #EFS
+      BASE_BUILDS_FOLDER: /amplication-data/build-data
+
+      #GitHub App
+      GITHUB_APP_APP_ID: "176701"
